--- a/src/index.html
+++ b/src/index.html
@@ -17,25 +17,25 @@
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://www.motionity.app/">
+<meta property="og:url" content="https://iuniai.com/">
 <meta property="og:title" content="Motionity - The web-based motion graphics editor for everyone">
 <meta property="og:description" content="Create animated videos for free with Motionity, an open source motion graphics editor with keyframing, masking, filters, text animations, and more. ">
-<meta property="og:image" content="https://motionity.app/meta.png">
+<meta property="og:image" content="https://iuniai.com/og-image.png">
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
-<meta property="twitter:url" content="https://www.motionity.app/">
+<meta property="twitter:url" content="https://iuniai.com/">
 <meta property="twitter:title" content="Motionity - The web-based motion graphics editor for everyone">
 <meta property="twitter:description" content="Create animated videos for free with Motionity, an open source motion graphics editor with keyframing, masking, filters, text animations, and more. ">
-<meta property="twitter:image" content="https://motionity.app/meta.png">
+<meta property="twitter:image" content="https://iuniai.com/og-image.png">
     </head>
     <body draggable="false">
 			<div id="disclaimer">
 				<div id="optimized">
 					<div id="emoji">🤔</div>
-					<div id="opt-title">Motionity isn't optimized for mobile</div>
-					<div id="opt-desc">You need to use a computer to be able to create animations with Motionity.</div>
-					<a href="https://twitter.com/alyssaxuu" target="_blank" id="opt-button">Other products by the maker</a>
+					<div id="opt-title">UAI editor isn't optimized for mobile</div>
+					<div id="opt-desc">You need to use a computer to be able to create animations with UAI editor.</div>
+					<a href="https://iuniai.com/workspace" id="opt-button">See Other products</a>
 				</div>
 				<div id="disc-overlay"></div>
 			</div>
@@ -276,8 +276,8 @@
             	</div>
 						</div>
 						<div id="bottom-canvas">
-							<a id="sponsor" href="https://github.com/sponsors/alyssaxuu" target="_blank"><img src="assets/sponsor.svg"> Sponsor</a>
-							<a id="alyssa-credit" href="https://twitter.com/alyssaxuu" target="_blank">Made by <span>Alyssa X</span> <img src="assets/alyssaimg.jpeg"></a>
+							<a id="sponsor" href="https://iuniai.com/workspace"><img src="assets/sponsor.svg"> Workspace</a>
+							<a id="alyssa-credit" href="https://iuniai.com">Made by <span>Universial AI</span> <img src=""></a>
 						</div>
             <img src="assets/replace-image.svg" id="replace-image">
 						<img src="assets/loading-image.svg" id="load-image" class="load-media">
